@@ -21,6 +21,14 @@ Changes
 Fixes
 =====
 
+ - Allow ``DISTINCT`` to operate on literals. E.g.::
+
+     SELECT DISTINCT ['val1', 'val2'], col1, col2, ... FROM t
+
+ - Allow ``GROUP BY`` on any literal. E.g.::
+
+      SELECT {a=1, b=2}, COUNT(*) FROM t GROUP BY 1
+
  - Fixed an issue that prevents CrateDB from bootstrap on Windows hosts.
 
  - Fixed an issue that could cause the ``_score >= <minScore>`` filter to not
